Fixed color contrast issues...

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -20,8 +20,8 @@ $mq-ie: "all and (-ms-high-contrast: none), (-ms-high-contrast: active)";
 $primary-color: #0d6efd;
 $secondary-color: #777777;
 $tertiary-color: #6e6e6e;
-$success-color: #5cb85c;
-$info-color: #0dcaf0;
+$success-color: #439143;
+$info-color: #039dbc;
 $alt-link: #0054ad;
 $warning: #fff3d9;
 $warning-em: #ffae00;
